# ai-geometry-workflows

./: .gitignore  AGENTS.md  AI_NAVIGATOR.md  NEWS.md  README.md  TEAM_UPDATE_2026-05-21.md  TEAM_UPDATE_2026-05-28.md  TOOLKIT.md  ai_geometry_workplan.md  card-prompts.json  index.html  presentation-llm-to-cad.html  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  engineering-task.yml  failure-lesson.yml
ai_geometry_toolkit/: __init__.py  cli.py
archive/: README.md
decisions/: 2026-05-19-feature-preserving-mesh-reconstruction.md  2026-05-20-nurbs-restart-from-named-rails.md  2026-05-28-constructive-grammar-before-reference-modeling.md  2026-06-01-flock-chapel-shell-medium-success.md  2026-06-01-grove-contour-derived-floor-plates.md  2026-06-01-infinity-tower-user-rhino-curves-source-authority.md  2026-06-01-karlatornet-vertical-section-loft-workflow.md  2026-06-01-shanghai-tower-square-cutter-source-grammar.md  2026-06-26-repo-vs-obsidian-knowledge-boundary.md
docs/: README.md  START_HERE.md  case-digest.md  case-library.md  context-system.md  development-directions-repo-fit.md  development-state.md  error-ledger.md  experience-capture-format.md  external-repo-constructor-map.md  library-index.md  obsidian-knowledge-map.md  project-data-map.md  reference-modeling-gates.md  repo-folder-architecture.md  repo-knowledge-boundary.md  repo-maintenance-guide.md  repository-map.md  spellshape-live-obj-direction.md  task-read-maps.md
scripts/: README.md  build_loft_chair_demo.py  build_semantic_smoke_rhino.py  rhino_common_helper.py
tests/: test_cli.py
(+139 files in other folders)
